header and nav bar alignment fix. Need to work on nav link and hover, hero section

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,1 +1,196 @@
 @use './partials/variables' as *;
+@use './partials/mixins' as *;
+@use './partials/global' as *;
+@use './partials/typography' as *;
+
+//need to work on the nav bar tabs (active and hover)
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:$primary-bandSiteBlack;
+    padding: 20px;
+    width:100%;
+ /*@include tablet{ 
+flex-direction:row;
+}
+@include desktop{
+padding:40px; (eg)
+}
+ */
+    &__title {
+      margin-bottom: 0.625rem;
+  
+      a {
+        text-decoration: none;
+      }
+  
+      &-img {
+       @include logo-bandsite;
+      }
+    }
+  
+    &__nav{
+        display:flex;
+        width:100%;
+        text-align:center;
+    &-bar{
+        width:100%;
+        &-list{
+            display:flex;
+            list-style: none;
+            padding:0;
+            width:50%;
+            justify-content: space-between;
+            margin:auto;
+            &-item a{
+                @include sectionHeaderM;
+                              text-decoration: none;
+                              color: $primary-white;
+                              font-size: $fontSize-subHeaderM;
+                              font-weight:$fontWeight-sectionHeaderM;
+                              opacity: 0.8;
+                              transition: opacity 0.3s;
+                              margin-bottom: 2rem;
+                              &:hover {
+                                    opacity: 1; //to highlight link on hover
+                                        }
+                                &.active{
+                                    font-weight:bold;
+                                    opacity:1;
+                                    padding-top: 2rem;
+                                    border-bottom:2px solid white;
+                                      }
+
+            }
+        }
+    }
+ }
+}
+
+// //overlay of primary bandsite black works with 50%, but unable to position hero title above overlay
+.hero{
+display:flex;
+justify-content:center;
+padding-left:1.5rem;
+background-image: url("../assets/Images/hero-bio.jpg");
+background-position: center;
+background-size: cover;
+flex-direction: column;
+height:14rem;
+color:$primary-white;
+@include pageHeaderM;
+position:relative;
+overflow:hidden;
+}
+
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $primary-bandSiteBlack;
+    opacity: 0.5;
+  }
+
+  .hero__title::before{
+    position: relative;
+  }
+
+.content{
+padding-top: 1.5rem;
+padding-bottom:1rem;
+padding-left:1rem;
+padding-right:1rem;
+color:$primary-bandSiteBlack;
+
+
+&__image{
+    width: 100%;
+}
+
+&__title{
+    @include sectionHeaderM;
+}
+
+&__quote{
+    @include bodyCopyM;
+
+    &--bold{
+        font-weight:bold;
+    }
+}
+&__aboutband-title{
+    @include subHeaderM;
+}
+&__aboutband-paraone{
+    @include bodyCopyM;
+    padding-bottom: $padding-btwComponentsM;
+}
+
+&__aboutband-paratwo{
+    @include bodyCopyM;
+}
+}
+
+.photo-container{
+    padding-top:1rem;
+    padding-bottom:1rem;
+    background-color: $secondary-alabaster;
+    padding-left:1rem;
+    padding-right:1rem;
+    
+    &__title{
+        @include sectionHeaderM;
+        color:$primary-bandSiteBlack;
+    }
+
+    &__gallery-image{
+        width: 100%;
+        height: 15rem;
+        margin-bottom:1rem;
+    }
+}
+
+.footer{
+    background-color: $primary-bandSiteBlack;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+    padding-left:1rem;
+    padding-right: 1rem;
+
+    &__title{
+        @include pageHeaderM;
+        color:$primary-white;
+    }
+
+    &-social{
+        display: flex;
+        justify-content:space-around;
+        width:50%;
+    }
+        &_banddetails{
+            display: flex;
+            flex-direction: column;
+            padding-bottom:2rem;
+        }
+    
+        &__brand-img{
+            @include logo-bandsite;
+        }
+        &-banddetails-bandmgmt__title{
+            @include subHeaderM;
+            color:$primary-white;
+        }
+        &-banddetails-bandmgmt__contact{
+            @include bodyCopyM;
+            color:$primary-white;
+        }
+
+        &-copyright{
+            @include bodyCopyM;
+            color:$primary-white;
+        }
+    }
